--- a/scss/object/project/_main.scss
+++ b/scss/object/project/_main.scss
@@ -299,9 +299,10 @@ color: #3C2A10;
     }
     
 }
-.p-title-archive-search__under-title {
+// .p-title-archive-search__under-title 
+.p-title-archive__under-title {
     @include tablet {
-        margin: 148px 0 110px 326px;
+        margin: 148px 0 110px 350px;
     }
 }
 
@@ -332,7 +333,23 @@ color: #3C2A10;
         margin: 0 100px 20px;
         display: flex;
     }
+    img {
+        overflow: hidden;
+        object-fit: cover;
+        object-position: 10% 60%;
+    }
 }
+
+.p-inner-media-archive img {
+    @include mobile {
+        box-sizing: border-box;
+        width: 94%;    
+    }
+    
+}
+
+
+
 
 
 // .p-img-archive-media 
@@ -353,9 +370,19 @@ color: #3C2A10;
     @include pc {
         
         width: 100%;
+        @include mobile {
+            margin: 0 20px 0;
+        }
         
     }
 }
+//検索結果がない時
+.p-inner-media-archive-search p{
+    margin-left: 100px;
+    font-size: 20px;
+}
+
+
 
 .p-container-media-archive {
     background-color: #3c2b1c;
@@ -368,7 +395,7 @@ color: #3C2A10;
         padding: 32px 59px 10px 35px;
         }
     @include pc {
-        padding: 56px 104px 0px 63px;
+        padding: 56px 70px 0px 63px;
     }
     
 }
@@ -398,10 +425,12 @@ color: #3C2A10;
 }
 
 .wp-block-heading {
-    color: #fff;
+    // color: #fff;
+    color: #3C2A10;
     font-size: 1.6rem;
     font-weight: bold;
     padding-bottom: 7px;
+    margin: 61px auto 61px 5vw;
     @include pc {
         font-size: 2.4rem;
         padding-bottom: 13px;
@@ -554,23 +583,31 @@ color: #3C2A10;
 
 // single & page----------------------------------------------------
 // WP
-.wp-block-cover__background {
-    background-image: url(img/ham-burger-with-vegetables-1639557.png);
-    background-size: cover;
+// .wp-block-cover__background
+.post-68 img.attachment-full {
+    // background-image: url(img/ham-burger-with-vegetables-1639557.png);
+    // background-size: cover;
     height: 225px;
-    overflow: hidden;
-    background-position: center bottom;
+    // overflow: hidden;
+    object-fit: cover;
+    // object-position: 50% 50%;
+    // background-position: center bottom;
+    width: 100%;
 
     @include tablet {
         height: 500px;
+        width: 100%;
     }
     @include pc {
         width: 100%;
     }
 }
-.post-68 .wp-block-heading {
-    color: #3c2a10;
-    font-size: 2rem;
+
+
+// .post-68 .wp-block-heading 
+.p-single-visual__text{
+    color: #FFFFFF;
+    font-size: 6rem;
     margin-top: 36px;
     margin-left: 5vw;
     @include tablet {
@@ -578,7 +615,8 @@ color: #3C2A10;
     }
 }
 
-.post-68 h2.wp-block-heading{
+.post-68 h2.wp-block-heading,
+.post-188 h2.wp-block-heading{
     color: #3C2A10;
     font-size: 2.8rem;
     font-weight: bold;
@@ -602,7 +640,8 @@ color: #3C2A10;
 
 }
 
-.post-68 p {
+.post-68 p,
+.post-188 p{
     color: #3c2a10;
     font-size: 1.6rem;
     margin: 0 5vw;
@@ -619,7 +658,8 @@ color: #3C2A10;
     }
 }
 
-.post-68 h3.wp-block-heading {
+.post-68 h3.wp-block-heading,
+.post-188 h3.wp-block-heading {
     color: #3c2a10;
     font-size: 2.8rem;
     font-weight: bold;
@@ -694,9 +734,11 @@ color: #3C2A10;
 // }
 
 //WPメディア上の横広画像
-.post-68 .size-full {
+.post-68 .size-full,
+.post-188 .size-full {
     display: flex;
     height: 124px;
+    object-position: 50% 90%;
     @include tablet {
         height: 264px;
     }
@@ -706,7 +748,8 @@ color: #3C2A10;
     }
 }
 
-img.wp-image-169 {
+
+img.wp-image-350 {
     object-fit: cover;
     object-position: 50% 100%;
     margin: 0 5vw;
@@ -738,13 +781,15 @@ img.wp-image-169 {
     }
 }
 
-.post-68 .wp-block-media-text {
+.post-68 .wp-block-media-text,
+.post-188 .wp-block-media-text {
     @include mobile {
     grid-template-columns: 40% auto!important;
     }
 }
 
-.wp-image-170 {
+.wp-image-170,
+.wp-image-195 {
     height: auto;
     overflow: hidden;
     flex-basis: 40%;
@@ -776,7 +821,8 @@ img.wp-image-169 {
 //WPギャラリー上の画像
 
 
-.gallery-image {
+.gallery-image,
+.wp-gallery-main-image .size-full {
     height: 358px;
     margin: auto;
     margin-bottom: 231px;
@@ -787,9 +833,12 @@ img.wp-image-169 {
     }
 }
 
+.wp-block-galley {
+    gap: 20px;
+}
 
-
-.wp-image-171 {
+.wp-image-171,
+.wp-image-356 {
     display: block;
     object-fit: cover;
     margin: 0 auto 30px;
@@ -806,22 +855,7 @@ img.wp-image-169 {
     }
 }
 
-// WPギャラリーの画像
-
-.post-68 .wp-block-gallery.has-nested-images.columns-default.is-cropped.wp-block-gallery-3.is-layout-flex.wp-block-gallery-is-layout-flex figure.wp-block-image.size-large {
-    width: 100%!important;
-    
-}
-
-figure .wp-block-gallery-3 {
-    gap: 10px!important;
-}
-
-
-
-
-
-
+// WPギャラリーの画像------------------------------------
 
 // img.wp-image-183 {
 //     object-fit: cover;
@@ -849,34 +883,60 @@ figure .wp-block-gallery-3 {
 //     }  
 // }
 
-figure.wp-block-gallery-3 {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: 1fr;
+
+// 一旦削除ーーーーーーーーーーーーーーーーーー
+// .wrapper-single-content .wp-block-galley__single {
+//     display: grid;
+//     gap: 16px;
+//     grid-template-columns: 1fr;
     
 
-    @include tablet {
+//     @include tablet {
         
-        grid-template-columns: 1fr 1fr;
-        width: 88vw;
-        margin: 0 5vw
+//         grid-template-columns: 1fr 1fr;
+//         width: 88vw;
+//         margin: 0 5vw
         
-    }
-    @include pc {
+//     }
+//     @include pc {
         
+//         grid-template-columns: 1fr 1fr 1fr;
+//         width: 70vw;
+//         margin: 0 auto 0;
+//         gap: 20px;
+//     }  
+// }
+
+// // WP ギャラリー画像
+
+// figure.wp-block-image {
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+// }
+// .wp-block-galley__single {
+//     gap: 30px;
+
+// }
+
+// 一旦削除ここまでーーーーーーーーーーー
+.wrapper-single-content .wp-block-galley__single {
+        display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        width: 70vw;
-        margin: 0 auto 0;
-    }  
-}
+        gap: 16px;
+    
+    }
 
-// WP ギャラリー画像
 
-figure.wp-block-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -903,7 +963,8 @@ figure.wp-block-image {
 //WPリスト---------
 
 // .p-list__single 
-.post-68 ul{
+.post-68 ul,
+.post-188 ul{
     font-size: 16px;
     color: #3C2A10;
     margin: 17px 6vw;
@@ -943,7 +1004,8 @@ ol {
 
 // WPタグのリスト-------------------------------------------------------
 // .p-container__tag-list-single
-.post-68 .tag-list {
+.post-68 .tag-list,
+.post-188 .tag-list {
     font-size: 16px;
     background-color: #f5f5f5;
     margin:30px 5vw 60px 5vw;
@@ -954,7 +1016,8 @@ ol {
     }
 }
 // .p-child-list__tag
-.post-68 .taglist br {
+.post-68 .tag-list br,
+.post-188 .tag-list br {
     margin-left: 2.5em;
     margin-bottom: 0;
 }
@@ -971,8 +1034,8 @@ ol {
 }
 
 //.p-table__single tr td:nth-child(2)
-.td{
-    width: 60vw;
+table tr td:nth-child(2) {
+    width: 70%;
 }
 
 //.p-table__single
@@ -992,22 +1055,16 @@ ol {
 }
 
 
-.post-68 .wp-block-button {
-    cursor: pointer;
-    background-color: #d5d5d5;
-    border:1px solid #707070;
-    border-radius: 10px;
-    font-size: 1.6rem;
-    font-weight: 700;
-    color: #707070;
-    }
+
 //.p-button__single-under-main
 
 
-.post-68 .wp-block-button__link .wp-element-button{
+.wp-block-button a {
+    cursor: pointer;
+    border:1px solid #707070;
     display: block;
-    margin: 30px 5vw ;
-    width: 90%;
+    // margin: 30px 5vw ;
+    // width: 90%;
     max-width: 429px;
     text-align: center;
     padding-top: 30px;
@@ -1036,6 +1093,10 @@ ol {
     font-size: 16px;
     font-weight: 700;
     font-style: normal;
+    
+}
+
+.post-68 p.wp-archive-last-text {
     @include tablet {
         margin-bottom: 150px;
     }
@@ -1043,8 +1104,6 @@ ol {
         margin-bottom: 274px;
     }
 }
-
-
 
 
 
