--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ footer {
   background: linear-gradient(to left, #F2EDE9, #DED8D3);
 }
 
-.search-form {
+.p-search-form {
   display: flex;
   justify-content: center;
   margin: 40px 7vw 39px;
@@ -179,17 +179,17 @@ footer {
   position: relative;
 }
 @media screen and (min-width: 768px) {
-  .search-form {
+  .p-search-form {
     gap: 14px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .search-form {
+  .p-search-form {
     margin: auto 2vw auto auto;
   }
 }
 
-.search-field {
+.p-search-form__keyword {
   max-width: 400px;
   width: 55vw;
   height: 46px;
@@ -202,7 +202,7 @@ footer {
   font-size: 1.6rem;
   border-radius: 10px;
 }
-.search-field::before {
+.p-search-form__keyword::before {
   content: "";
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2024%2024%22%3E%20%3Cpath%20d%3D%22M23.7%2020.8%2019%2016.1c-.2-.2-.5-.3-.8-.3h-.8c1.3-1.7%202-3.7%202-6C19.5%204.4%2015.1%200%209.7%200S0%204.4%200%209.7s4.4%209.7%209.7%209.7c2.3%200%204.3-.8%206-2v.8c0%20.3.1.6.3.8l4.7%204.7c.4.4%201.2.4%201.6%200l1.3-1.3c.5-.5.5-1.2.1-1.6zm-14-5.1c-3.3%200-6-2.7-6-6s2.7-6%206-6%206%202.7%206%206-2.6%206-6%206z%22%20fill%3D%22%239aa0a6%22%3E%3C%2Fpath%3E%20%3C%2Fsvg%3E");
   background-position: center;
@@ -211,7 +211,7 @@ footer {
   height: 1.6rem;
 }
 
-.search-submit {
+input.p-search-form__submit {
   height: 46px;
   max-width: 136px;
   width: 20vw;
@@ -525,8 +525,8 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-  .p-title-archive-search__under-title {
-    margin: 148px 0 110px 326px;
+  .p-title-archive__under-title {
+    margin: 148px 0 110px 350px;
   }
 }
 
@@ -561,6 +561,20 @@ body {
     display: flex;
   }
 }
+.p-media img {
+  overflow: hidden;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 10% 60%;
+     object-position: 10% 60%;
+}
+
+@media screen and (max-width: 768px) {
+  .p-inner-media-archive img {
+    box-sizing: border-box;
+    width: 94%;
+  }
+}
 
 .wp-post-image {
   height: 230px;
@@ -579,6 +593,16 @@ body {
     width: 100%;
   }
 }
+@media screen and (min-width: 1280px) and (max-width: 768px) {
+  .p-inner-media-archive {
+    margin: 0 20px 0;
+  }
+}
+
+.p-inner-media-archive-search p {
+  margin-left: 100px;
+  font-size: 20px;
+}
 
 .p-container-media-archive {
   background-color: #3c2b1c;
@@ -594,7 +618,7 @@ body {
 }
 @media screen and (min-width: 1280px) {
   .p-container-media-archive {
-    padding: 56px 104px 0px 63px;
+    padding: 56px 70px 0px 63px;
   }
 }
 
@@ -630,10 +654,11 @@ body {
 }
 
 .wp-block-heading {
-  color: #fff;
+  color: #3C2A10;
   font-size: 1.6rem;
   font-weight: bold;
   padding-bottom: 7px;
+  margin: 61px auto 61px 5vw;
 }
 @media screen and (min-width: 1280px) {
   .wp-block-heading {
@@ -779,37 +804,38 @@ body {
   margin: 10px;
 }
 
-.wp-block-cover__background {
-  background-image: url(img/ham-burger-with-vegetables-1639557.png);
-  background-size: cover;
+.post-68 img.attachment-full {
   height: 225px;
-  overflow: hidden;
-  background-position: center bottom;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
 }
 @media screen and (min-width: 768px) {
-  .wp-block-cover__background {
+  .post-68 img.attachment-full {
     height: 500px;
+    width: 100%;
   }
 }
 @media screen and (min-width: 1280px) {
-  .wp-block-cover__background {
+  .post-68 img.attachment-full {
     width: 100%;
   }
 }
 
-.post-68 .wp-block-heading {
-  color: #3c2a10;
-  font-size: 2rem;
+.p-single-visual__text {
+  color: #FFFFFF;
+  font-size: 6rem;
   margin-top: 36px;
   margin-left: 5vw;
 }
 @media screen and (min-width: 768px) {
-  .post-68 .wp-block-heading {
+  .p-single-visual__text {
     margin-top: 56px;
   }
 }
 
-.post-68 h2.wp-block-heading {
+.post-68 h2.wp-block-heading,
+.post-188 h2.wp-block-heading {
   color: #3C2A10;
   font-size: 2.8rem;
   font-weight: bold;
@@ -818,12 +844,14 @@ body {
   margin-bottom: 25px;
 }
 @media screen and (min-width: 768px) {
-  .post-68 h2.wp-block-heading {
+  .post-68 h2.wp-block-heading,
+.post-188 h2.wp-block-heading {
     margin: 55px auto 55px 5vw;
   }
 }
 @media screen and (min-width: 1280px) {
-  .post-68 h2.wp-block-heading {
+  .post-68 h2.wp-block-heading,
+.post-188 h2.wp-block-heading {
     width: 70vw;
     font-size: 3.6rem;
     margin: 61px auto 61px 5vw;
@@ -836,7 +864,8 @@ body {
   margin: 0 5vw;
 }
 
-.post-68 p {
+.post-68 p,
+.post-188 p {
   color: #3c2a10;
   font-size: 1.6rem;
   margin: 0 5vw;
@@ -853,7 +882,8 @@ body {
   }
 }
 
-.post-68 h3.wp-block-heading {
+.post-68 h3.wp-block-heading,
+.post-188 h3.wp-block-heading {
   color: #3c2a10;
   font-size: 2.8rem;
   font-weight: bold;
@@ -862,12 +892,14 @@ body {
   margin-bottom: 25px;
 }
 @media screen and (min-width: 768px) {
-  .post-68 h3.wp-block-heading {
+  .post-68 h3.wp-block-heading,
+.post-188 h3.wp-block-heading {
     margin: 55px auto 55px 5vw;
   }
 }
 @media screen and (min-width: 1280px) {
-  .post-68 h3.wp-block-heading {
+  .post-68 h3.wp-block-heading,
+.post-188 h3.wp-block-heading {
     width: 70vw;
     font-size: 3.6rem;
     margin: 61px auto 61px 5vw;
@@ -904,23 +936,28 @@ body {
   margin: 0;
 }
 
-.post-68 .size-full {
+.post-68 .size-full,
+.post-188 .size-full {
   display: flex;
   height: 124px;
+  -o-object-position: 50% 90%;
+     object-position: 50% 90%;
 }
 @media screen and (min-width: 768px) {
-  .post-68 .size-full {
+  .post-68 .size-full,
+.post-188 .size-full {
     height: 264px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .post-68 .size-full {
+  .post-68 .size-full,
+.post-188 .size-full {
     width: 100%;
     height: 500px;
   }
 }
 
-img.wp-image-169 {
+img.wp-image-350 {
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: 50% 100%;
@@ -929,7 +966,7 @@ img.wp-image-169 {
   width: 90vw;
 }
 @media screen and (min-width: 1280px) {
-  img.wp-image-169 {
+  img.wp-image-350 {
     width: 100%;
     margin: 0 5vw 0;
     max-width: 100%;
@@ -958,12 +995,14 @@ img.wp-image-169 {
 }
 
 @media screen and (max-width: 768px) {
-  .post-68 .wp-block-media-text {
+  .post-68 .wp-block-media-text,
+.post-188 .wp-block-media-text {
     grid-template-columns: 40% auto !important;
   }
 }
 
-.wp-image-170 {
+.wp-image-170,
+.wp-image-195 {
   height: auto;
   overflow: hidden;
   flex-basis: 40%;
@@ -989,7 +1028,8 @@ img.wp-image-169 {
   padding: 0;
 }
 
-.gallery-image {
+.gallery-image,
+.wp-gallery-main-image .size-full {
   height: 358px;
   margin: auto;
   margin-bottom: 231px;
@@ -997,12 +1037,18 @@ img.wp-image-169 {
      object-fit: contain;
 }
 @media screen and (min-width: 1280px) {
-  .gallery-image {
+  .gallery-image,
+.wp-gallery-main-image .size-full {
     margin: 0 auto 60px;
   }
 }
 
-.wp-image-171 {
+.wp-block-galley {
+  gap: 20px;
+}
+
+.wp-image-171,
+.wp-image-356 {
   display: block;
   -o-object-fit: cover;
      object-fit: cover;
@@ -1011,66 +1057,42 @@ img.wp-image-169 {
   max-width: 581px;
 }
 @media screen and (min-width: 768px) {
-  .wp-image-171 {
+  .wp-image-171,
+.wp-image-356 {
     margin-bottom: 231px;
     height: 358px;
     width: 581px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .wp-image-171 {
+  .wp-image-171,
+.wp-image-356 {
     width: 35vw;
     margin: 0 auto 60px;
   }
 }
 
-.post-68 .wp-block-gallery.has-nested-images.columns-default.is-cropped.wp-block-gallery-3.is-layout-flex.wp-block-gallery-is-layout-flex figure.wp-block-image.size-large {
-  width: 100% !important;
-}
-
-figure .wp-block-gallery-3 {
-  gap: 10px !important;
-}
-
-figure.wp-block-gallery-3 {
+.wrapper-single-content .wp-block-galley__single {
   display: grid;
-  gap: 10px;
-  grid-template-columns: 1fr;
-}
-@media screen and (min-width: 768px) {
-  figure.wp-block-gallery-3 {
-    grid-template-columns: 1fr 1fr;
-    width: 88vw;
-    margin: 0 5vw;
-  }
-}
-@media screen and (min-width: 1280px) {
-  figure.wp-block-gallery-3 {
-    grid-template-columns: 1fr 1fr 1fr;
-    width: 70vw;
-    margin: 0 auto 0;
-  }
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 16px;
 }
 
-figure.wp-block-image {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.post-68 ul {
+.post-68 ul,
+.post-188 ul {
   font-size: 16px;
   color: #3C2A10;
   margin: 17px 6vw;
 }
 @media screen and (min-width: 768px) {
-  .post-68 ul {
+  .post-68 ul,
+.post-188 ul {
     margin: 17px 6vw;
   }
 }
 @media screen and (min-width: 1280px) {
-  .post-68 ul {
+  .post-68 ul,
+.post-188 ul {
     width: 60vw;
   }
 }
@@ -1101,7 +1123,8 @@ ol {
   margin-bottom: 20px;
 }
 
-.post-68 .tag-list {
+.post-68 .tag-list,
+.post-188 .tag-list {
   font-size: 16px;
   background-color: #f5f5f5;
   margin: 30px 5vw 60px 5vw;
@@ -1109,12 +1132,14 @@ ol {
   overflow: hidden;
 }
 @media screen and (min-width: 1280px) {
-  .post-68 .tag-list {
+  .post-68 .tag-list,
+.post-188 .tag-list {
     width: 70vw;
   }
 }
 
-.post-68 .taglist br {
+.post-68 .tag-list br,
+.post-188 .tag-list br {
   margin-left: 2.5em;
   margin-bottom: 0;
 }
@@ -1130,8 +1155,8 @@ ol {
   }
 }
 
-.td {
-  width: 60vw;
+table tr td:nth-child(2) {
+  width: 70%;
 }
 
 .has-text-align-left td {
@@ -1146,20 +1171,10 @@ ol {
   margin: 30px 5vw;
 }
 
-.post-68 .wp-block-button {
+.wp-block-button a {
   cursor: pointer;
-  background-color: #d5d5d5;
   border: 1px solid #707070;
-  border-radius: 10px;
-  font-size: 1.6rem;
-  font-weight: 700;
-  color: #707070;
-}
-
-.post-68 .wp-block-button__link .wp-element-button {
   display: block;
-  margin: 30px 5vw;
-  width: 90%;
   max-width: 429px;
   text-align: center;
   padding-top: 30px;
@@ -1169,7 +1184,7 @@ ol {
   border-radius: 20px;
 }
 @media screen and (min-width: 1280px) {
-  .post-68 .wp-block-button__link .wp-element-button {
+  .wp-block-button a {
     margin-bottom: 60px;
   }
 }
@@ -1190,13 +1205,14 @@ ol {
   font-weight: 700;
   font-style: normal;
 }
+
 @media screen and (min-width: 768px) {
-  .post-68 p {
+  .post-68 p.wp-archive-last-text {
     margin-bottom: 150px;
   }
 }
 @media screen and (min-width: 1280px) {
-  .post-68 p {
+  .post-68 p.wp-archive-last-text {
     margin-bottom: 274px;
   }
 }
