--- a/scss/object/project/_sidebar.scss
+++ b/scss/object/project/_sidebar.scss
@@ -163,7 +163,8 @@
 //     margin-left: 6.6rem;
 // }
 
-.menu-mainmenu-container {
+// .menu-mainmenu-container 
+.p-aside-container ul{
     font-size: 2.4rem;
     line-height: 5rem;
     color: #707070;
