--- a/style.css
+++ b/style.css
@@ -225,14 +225,6 @@ input.p-search-form__submit {
   color: #707070;
 }
 
-body.open-menu {
-  overflow: hidden;
-}
-
-body {
-  overflow-x: hidden;
-}
-
 .p-title__main {
   color: #fff;
   font-weight: bold;
@@ -551,7 +543,7 @@ body {
 }
 
 .p-media {
-  margin-top: 20px;
+  margin: 20px 20px 0 20px;
 }
 @media screen and (min-width: 768px) {
   .p-media {
@@ -576,13 +568,12 @@ body {
 @media screen and (max-width: 768px) {
   .p-inner-media-archive img {
     box-sizing: border-box;
-    width: 94%;
+    width: 100%;
   }
 }
 
 .wrapper-archive-content .wp-post-image {
   height: 230px;
-  margin: 0 20px 0;
 }
 @media screen and (min-width: 768px) {
   .wrapper-archive-content .wp-post-image {
@@ -610,7 +601,6 @@ body {
 
 .p-container-media-archive {
   background-color: #3c2b1c;
-  margin: 0 20px;
   padding: 32px 16.11px 10px;
 }
 @media screen and (min-width: 768px) {
@@ -702,17 +692,54 @@ body {
   }
 }
 
-.p-inner-archive-mobile-pagenation {
-  position: relative;
-  height: 100px;
-  overflow: hidden;
-  font-size: 1.6rem;
-  color: #707070;
+.wp-pagenavi {
+  clear: both;
+  text-align: center;
+  font-family: Roboto;
+  font-weight: bold;
 }
-@media screen and (min-width: 768px) {
-  .p-inner-archive-mobile-pagenation {
-    display: none;
-  }
+.wp-pagenavi .previouspostslink,
+.wp-pagenavi .nextpostslink {
+  color: #707070;
+  font-size: 3rem;
+  font-weight: normal;
+  font-family: "Nanum Myeongjo", serif;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 5px;
+}
+
+previouspostslink .wp-pagenavi a,
+.wp-pagenavi span {
+  color: #707070;
+  padding: 8px 15px;
+  margin: 0 2px;
+}
+
+.wp-pagenavi a.page,
+.wp-pagenavi .current {
+  color: #707070;
+  background-color: #FFF;
+  border: solid 1px #e0e0d2;
+  padding: 8px 15px;
+  margin: 0 10px;
+  white-space: nowrap;
+  transition: 0.2s ease-in-out;
+  text-align: center;
+  text-decoration: none;
+}
+
+.wp-pagenavi a:hover {
+  color: #FFF;
+  background-color: #999;
+  border-color: #999;
+}
+
+.wp-pagenavi span.current {
+  color: #FFF;
+  background-color: #3C2B1C;
+  border-color: #707070;
+  font-weight: bold;
 }
 
 .p-inner-archive-pagenation {
@@ -778,12 +805,25 @@ body {
   color: #fff;
 }
 
+.p-inner-archive-mobile-pagenation {
+  position: relative;
+  height: 100px;
+  overflow: hidden;
+  font-size: 1.6rem;
+  color: #707070;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) {
+  .p-inner-archive-mobile-pagenation {
+    display: none;
+  }
+}
+
 .p-btn-archive__back {
   position: absolute;
-  left: 20px;
   top: 50px;
   padding-left: 30px;
-  background: url(img/arrow.jpg) no-repeat;
 }
 
 .p-btn-archive__next {
@@ -795,10 +835,15 @@ body {
 .wp-pagenavi {
   display: flex;
   justify-content: center;
-  margin: 135px auto 65px;
+  margin: 135px auto 60px;
   align-items: center;
   font-size: 16px;
   font-family: Roboto serif;
+}
+@media screen and (max-width: 768px) {
+  .wp-pagenavi {
+    display: none;
+  }
 }
 
 .current {
