--- a/scss/object/project/_main.scss
+++ b/scss/object/project/_main.scss
@@ -4,12 +4,12 @@
 
 
 
-// body.open-menu {
-//     overflow: hidden;
-// }
-// body {
-//     overflow-x: hidden;
-// }
+body.open-menu {
+    overflow: hidden;
+}
+body {
+    overflow-x: hidden;
+}
 
 
 .p-title__main {
