--- a/style.css
+++ b/style.css
@@ -225,6 +225,14 @@ input.p-search-form__submit {
   color: #707070;
 }
 
+body.open-menu {
+  overflow: hidden;
+}
+
+body {
+  overflow-x: hidden;
+}
+
 .p-title__main {
   color: #fff;
   font-weight: bold;
@@ -1767,13 +1775,12 @@ ol {
 }
 
 .l-nav.open-menu {
-  width: 90%;
-  max-width: 367px;
+  width: 328px;
   overflow: scroll;
 }
 @media screen and (min-width: 768px) {
   .l-nav.open-menu {
-    max-width: 367px;
+    width: 367px;
     height: 100%;
   }
 }
