--- a/style.css
+++ b/style.css
@@ -1671,7 +1671,8 @@ ol {
   width: calc(100vw - (100vw - 100%));
 }
 
-.p-link-footer {
+.p-link__footer ul {
+  width: 100%;
   display: inline-block;
   font-size: 1.8rem;
   color: #fff;
@@ -1679,22 +1680,24 @@ ol {
   z-index: 1;
 }
 @media screen and (min-width: 768px) {
-  .p-link-footer {
+  .p-link__footer ul {
     margin-top: 40px;
   }
 }
 
-.p-link-footer__shopinfo {
+.p-link__footer li {
   display: inline-block;
+}
+
+.p-link__footer li:first-of-type a {
   position: relative;
 }
 
-.p-link-footer__history {
-  display: inline-block;
+.p-link__footer li:last-of-type a {
   margin-left: 2rem;
   position: relative;
 }
-.p-link-footer__history::before {
+.p-link__footer li:last-of-type a::before {
   content: "";
   position: absolute;
   top: 15px;
