--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -1,9 +1,15 @@
 
 html {
     font-size: 62.5%;
-    font-family: 'M PLUS 1', sans-serif;
+    // font-family: 'M PLUS 1', sans-serif;
+    // font-family: 'M PLUS 1p', sans-serif;
 
 }
+body {
+	font-family: 'M PLUS 1p', sans-serif; 
+
+}
+
 
 *, *:before, *:after {
 	-webkit-box-sizing: border-box;
