grid高さ調整後

--- a/scss/object/project/_header.scss
+++ b/scss/object/project/_header.scss
@@ -8,6 +8,10 @@
 .p-header-wrapper {
     background-color: #fff7ef;
     overflow: hidden;
+    @include mobile {
+        height: 215px;
+    }
+    height: 217px;
     @include pc {
         display: flex;
         width: 100%;
