--- a/scss/foundation/_grid.scss
+++ b/scss/foundation/_grid.scss
@@ -6,17 +6,24 @@ body {
     @include pc{
     display: grid;
     grid-template:
-        "header aside" 
-        "main aside"
+        "header  aside" 
+        "main    aside"
         "footer footer";
+    grid-template-rows: 217px auto auto;
     }
 }
 
-header {
+
+
+
+header { 
     grid-area: header;
+    
+    
 }
 main {
     grid-area: main;
+    
 }
 nav {
     grid-area: aside;
