--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+/* 
+Theme Name: ReshinHamburger
+Theme URI: 
+Author: 
+Author URI: 
+Description: 
+Version: 1.0
+*/
 html {
   font-size: 62.5%;
 }
